# flameconnect

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  FLAMECONNECT_API_REPORT.md  LICENSE  README.md  flameconnect_reader.py  pyproject.toml  release-please-config.json  renovate.json  setup.cfg
.ai/task-manager/: .init-metadata.json
.ai/task-manager/archive/01--project-foundation/: plan-01--project-foundation.md
.ai/task-manager/archive/02--fireplace-state-controls/: plan-02--fireplace-state-controls.md
.ai/task-manager/archive/03--flame-effect-controls/: plan-03--flame-effect-controls.md
.ai/task-manager/archive/04--tui-visual-polish/: plan-04--tui-visual-polish.md
.ai/task-manager/archive/05--fireplace-visual-overhaul/: plan-05--fireplace-visual-overhaul.md
.ai/task-manager/archive/06--responsive-tui-layout/: plan-06--responsive-tui-layout.md
.ai/task-manager/archive/07--tui-fixes-and-features/: plan-07--tui-fixes-and-features.md
.ai/task-manager/archive/08--tui-refinements/: plan-08--tui-refinements.md
.ai/task-manager/archive/09--tui-bug-fixes/: plan-09--tui-bug-fixes.md
.ai/task-manager/archive/10--pytest-cov-integration/: plan-10--pytest-cov-integration.md
.ai/task-manager/archive/11--increase-test-coverage/: plan-11--increase-test-coverage.md
.ai/task-manager/archive/12--mutation-testing-expansion/: plan-12--mutation-testing-expansion.md
.ai/task-manager/archive/14--cli-tui-parity-readme-update/: plan-14--cli-tui-parity-readme-update.md
.ai/task-manager/config/: TASK_MANAGER.md
.github/workflows/: ci.yml  conventional-commits.yml  publish-to-pypi.yml  release.yml  update-uv-lock.yml
src/flameconnect/: __init__.py  __main__.py  auth.py  b2c_login.py  cli.py  client.py  const.py  exceptions.py  models.py  protocol.py
src/flameconnect/tui/: __init__.py  app.py  auth_screen.py  color_screen.py  fire_select_screen.py  flame_color_screen.py  flame_speed_screen.py  heat_mode_screen.py  media_theme_screen.py  screens.py  temperature_screen.py  timer_screen.py  widgets.py
tests/: conftest.py  test_auth.py  test_b2c_login.py  test_cli_commands.py  test_cli_set.py  test_client.py  test_fireplace_visual.py  test_main.py  test_models.py  test_protocol.py  test_responsive_layout.py  test_tui_actions.py  test_tui_screens.py  test_widgets_format.py
tests/fixtures/: get_fire_overview.json  get_fires.json
(+75 files in other folders)
