[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flameconnect"
version = "0.4.1"
description = "Async Python library for controlling Dimplex, Faber, and Real Flame fireplaces via the Flame Connect cloud API"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiohttp>=3.13.3",
    "msal>=1.34.0",
]

[project.optional-dependencies]
tui = ["textual>=8.0.0"]
dev = [
    "ruff>=0.15.2",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-aiohttp>=1.1.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "mutmut>=3.5.0",
    "aioresponses>=0.7.8",
]

[project.scripts]
flameconnect = "flameconnect.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/flameconnect"]

[tool.ruff]
line-length = 88
target-version = "py313"
exclude = ["flameconnect_reader.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/flameconnect"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
